# Qt7z

./: CMakeLists.txt
Qt7z/: CMakeLists.txt  Qt7zPackage.cpp  Qt7zPackage.h  qt7zfileinfo.h  qt7zpackage.cpp  qt7zpackage.h  qt7zpackage_win.cpp
Qt7z/7zip/CPP/7zip/Compress/: BZip2Register.cpp  Deflate64Register.cpp  RarCodecsRegister.cpp
Qt7z/7zip/Patches/: 0001-Add-Static-Force-Link.diff  0001-Add-Static-Force-Link.patch
Qt7zTest/: CMakeLists.txt  Qt7zPackage_Tests.cpp  Qt7zTest.pro  Qt7zTest.qrc  TestQt7zPackage.cpp  TestQt7zPackage.h
Qt7zTest/assets/: image.7z  test1.7z
